tests/fixtures/errors/circular_main.lox
import "self:tests/fixtures/errors/circular_a.lox" as a;
